--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1172,6 +1172,7 @@ h3 {
     /* line 92, ../../Arafath/CL/December/236. Event-02/HTML/scss/_header.scss */
     .header-area .main-header-area .buy_tkt .book_btn {
         margin-left: 0;
+
     }
 }
 
@@ -1182,7 +1183,7 @@ h3 {
     padding: 12px 46px;
     font-size: 16px;
     font-weight: 400;
-    border: transparent;
+    border: 1px solid transparent;
     color: #fff;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
