--- a/public/assets/css/joinNow.css
+++ b/public/assets/css/joinNow.css
@@ -117,6 +117,27 @@ form label {
     color: #fff !important;
 }
 
+.form_passsword
+{
+    position: relative;
+}
+.btn-outline-secondary
+{
+    position: absolute !important;
+    right: 15px;
+    top: 5px;
+    border-color: transparent !important;
+    background: transparent !important;
+}
+
+.btn-outline-secondary:hover
+{
+    background: transparent !important;
+    border-color: transparent !important;
+}
+
+
+
 .profile_update_btn {
     background: linear-gradient(to right, #e91a83, #4c24c1) !important;
     border: transparent !important;
@@ -144,6 +165,9 @@ form label {
     /* border-radius: 40px; */
     padding: 10px 20px;
 }
+
+
+
 
 .send_message_btn:hover {
     background: transparent !important;
