--- a/public/assets/css/joinNow.css
+++ b/public/assets/css/joinNow.css
@@ -88,31 +88,21 @@
     background: linear-gradient(to right, #e91a83, #4c24c1);
 }
 
-#eventsTable {
+#eventsTable,#eventMessageTable,#registrantsTable {
     width: 100% !important;
 }
 
-#eventsTable tr th {
+#eventsTable tr th,#eventMessageTable tr th,#registrantsTable tr th {
     font-size: 20px;
     padding: 10px;
 }
 
-#eventsTable tr td {
+#eventsTable tr td,#eventMessageTable tr td,#registrantsTable tr td {
     padding: 10px;
 }
 
-#eventMessageTable {
-    width: 100% !important;
-}
 
-#eventMessageTable tr th {
-    font-size: 20px;
-    padding: 10px;
-}
 
-#eventMessageTable tr td {
-    padding: 10px;
-}
 
 
 
@@ -262,6 +252,9 @@ input:focus {
     background: linear-gradient(to right, #e91a83, #4c24c1) !important;
     color: #fff;
     border: transparent;
+    width: 100%;
+    text-align: center;
+    font-size: 22px;
 }
 
 #eventsTable_processing {
@@ -269,6 +262,8 @@ input:focus {
     color: #fff;
     border: transparent;
 }
+
+
 
 @media(max-width:768px) {
     #eventsTable tr th {
