--- a/public/assets/css/joinNow.css
+++ b/public/assets/css/joinNow.css
@@ -112,9 +112,8 @@
     display: none !important;
 }
 
-.form-contact label
-{
-    font-size:17px !important;
+.form-contact label {
+    font-size: 17px !important;
 }
 
 
@@ -279,7 +278,8 @@ input:focus {
     font-size: 22px;
 }
 
-#eventsTable_processing {
+#eventsTable_processing,
+#eventMessageTable_processing {
     background: linear-gradient(to right, #e91a83, #4c24c1) !important;
     color: #fff;
     border: transparent;
@@ -300,14 +300,18 @@ input:focus {
 
 .chat_font p {
     color: #fff;
+    line-height: 1;
+    font-size: 13px;
+    margin-top: 2px;
 }
 
 .chat_name {
     color: #fff;
+    font-size: 14px;
 }
 
 .chat-message .timestamp {
-    font-size: 12px !important;
+    font-size: 9px !important;
     color: #fff;
 }
 
