--- a/public/assets/css/joinNow.css
+++ b/public/assets/css/joinNow.css
@@ -117,6 +117,33 @@
     font-size:17px !important;
 }
 
+.select2-container--default .select2-selection--multiple .select2-selection__choice
+{
+    color:#000 !important;
+}
+
+.form_passsword
+{
+    position:relative !important;
+}
+
+.toggle-password,.confirm-toggle-password
+{
+    position: absolute;
+    right: 15px;
+    top: 5px;
+}
+
+.btn-outline-secondary
+{
+    border: none !important;
+}
+
+.btn-outline-secondary:hover,.btn-outline-secondary:active
+{
+    background: none !important;
+    border: none !important;
+}
 
 
 
