--- a/public/assets/css/joinNow.css
+++ b/public/assets/css/joinNow.css
@@ -1,3 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
 .mt-199 {
     padding-top: 185px;
 }
@@ -63,6 +68,39 @@
     border: 1px solid #ccc;
     color: #fff;
 }
+
+.text-header
+{
+    font-family: "Poppins", serif !important;
+  font-weight: 700 !important;
+  font-size: 20px !important;
+}
+
+.text-family
+{
+    font-family: "Poppins", serif !important;
+}
+
+.text-register
+{
+    font-family: "Muli", sans-serif !important;
+}
+
+.custom-font-size {
+    font-size: 20px; /* Adjust the size as needed */
+}
+
+.form_inline
+{
+    padding-right: 2% !important;
+}
+
+.radio_form
+{
+    margin-top: 10px !important;
+}
+
+
 
 
 
