--- a/public/assets/css/joinNow.css
+++ b/public/assets/css/joinNow.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -16,6 +15,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     /* Optional: add some shadow for better visibility */
 }
+
 
 
 .form-control {
@@ -69,34 +69,30 @@
     color: #fff;
 }
 
-.text-header
-{
+.text-header {
     font-family: "Poppins", serif !important;
-  font-weight: 700 !important;
-  font-size: 20px !important;
+    font-weight: 700 !important;
+    font-size: 20px !important;
 }
 
-.text-family
-{
+.text-family {
     font-family: "Poppins", serif !important;
 }
 
-.text-register
-{
+.text-register {
     font-family: "Muli", sans-serif !important;
 }
 
 .custom-font-size {
-    font-size: 20px; /* Adjust the size as needed */
+    font-size: 20px;
+    /* Adjust the size as needed */
 }
 
-.form_inline
-{
+.form_inline {
     padding-right: 2% !important;
 }
 
-.radio_form
-{
+.radio_form {
     margin-top: 10px !important;
 }
 
@@ -132,6 +128,8 @@
     width: 100% !important;
 }
 
+
+
 #eventsTable tr th,
 #eventMessageTable tr th,
 #registrantsTable tr th {
@@ -154,30 +152,27 @@
     font-size: 17px !important;
 }
 
-.select2-container--default .select2-selection--multiple .select2-selection__choice
-{
-    color:#000 !important;
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    color: #000 !important;
 }
 
-.form_passsword
-{
-    position:relative !important;
+.form_passsword {
+    position: relative !important;
 }
 
-.toggle-password,.confirm-toggle-password
-{
+.toggle-password,
+.confirm-toggle-password {
     position: absolute;
     right: 15px;
     top: 5px;
 }
 
-.btn-outline-secondary
-{
+.btn-outline-secondary {
     border: none !important;
 }
 
-.btn-outline-secondary:hover,.btn-outline-secondary:active
-{
+.btn-outline-secondary:hover,
+.btn-outline-secondary:active {
     background: none !important;
     border: none !important;
 }
@@ -285,7 +280,7 @@ input:focus {
 
 .profile_view_btn {
     background: transparent !important;
-    border: 1px solid transparent !important;
+    border: 1px solid #e91a83 !important;
     font-size: 20px;
     color: #e91a83;
     padding: 5px 20px;
@@ -407,3 +402,14 @@ input:focus {
 }
 
 
+.table td,
+.table th,
+.table td {
+    border: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
+
+
+#eventsTable {
+    border-top: 1px solid rgba(255, 255, 255, 0.2) !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important;
+}
